Fix bugs: - Favicon - Adress text - About us items alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1813,9 +1813,12 @@ div.mc-image {
     margin-bottom: 20px;
     margin-left: 0px;
   }
+  .cardText {
+    width: fit-content;
+  }
   
   .cardImg {
-    width: 140px;
+    width: 100px;
     height: 105px;
   }
   
